--- a/test-05/src/styles/_billboard_cover.scss
+++ b/test-05/src/styles/_billboard_cover.scss
@@ -17,6 +17,20 @@
   width: 100%;
   position: relative;
 
+  .billboard-spinner {
+    height: 80px;
+    margin: 0 auto 0 auto;
+    padding-top: 2px;
+
+
+    i {
+      color: #bababa;
+      background-color: initial;
+      position: initial;
+      opacity: initial;
+    }
+  }
+
   span {
     display: flex;
     color: #ffF;
